--- a/src/app/features/user/course/pages/courses/courses.component.html
+++ b/src/app/features/user/course/pages/courses/courses.component.html
@@ -1,22 +1,44 @@
 
-<div class="flex items-center justify-between mb-8">
-  <h2 class="text-3xl font-bold text-gray-800 flex gap-2"><span class="icon-books text-4xl"></span> Available Courses</h2>
-  <input type="text" class="border-b-2 outline-none text-xl placeholder:text-gray-400" placeholder="Search">
+<div class="w-[1170px] mx-auto">
+  <div class="flex items-center justify-between mb-6">
+    <h2 class="text-2xl font-semibold text-gray-800 flex gap-2 ml-3">Kurslar</h2>
+  </div>
 </div>
+<hr class="border-gray-200 mb-6" />
+<div class="w-[1170px] mx-auto">
+  <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5">
+    <div *ngFor="let course of courses" class="flex flex-col bg-white rounded-2xl overflow-hidden shadow-[0px_0px_20px_#4747474d] p-4">
+      <div class="mb-4 rounded-xl overflow-hidden">
+        <img [src]="course.image" alt="{{ course.title }}"
+            class="h-64 w-full object-cover" />
+      </div>
 
-<div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
-  <div *ngFor="let course of courses" class="bg-white rounded-2xl overflow-hidden shadow-md hover:shadow-xl transition duration-300 group">
-    <img [src]="course.image" alt="{{ course.title }}"
-          class="h-48 w-full object-cover group-hover:scale-105 transition-transform duration-300" />
+      <div class="flex flex-col grow">
+        <h3 class="text-lg font-semibold text-[#0B181E] mb-2">{{ course.title }}</h3>
+        <p class="text-gray-600 text-sm mb-4">{{ course.description }}</p>
+        <div class="text-sm font-medium mb-8  flex items-center gap-2 grow">
+          <p class="bg-[#F5F5F5] py-2 px-4 rounded-3xl font-medium">{{ course.category }}</p>
+          <p class="bg-[#F5F5F5] py-2 px-4 rounded-3xl font-medium flex items-center gap-1">
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <rect x="2" y="2" width="16" height="16" rx="3" fill="white"/>
+              <path d="M10 2H15C16.6569 2 18 3.34315 18 5V15C18 16.6569 16.6569 18 15 18H10V2Z" fill="#D6D9E2"/>
+              <rect x="2.75" y="2.75" width="14.5" height="14.5" rx="2.25" stroke="#282B32" stroke-width="1.5"/>
+              <path d="M4.5 13.25C4.5 12.9739 4.72386 12.75 5 12.75L5.5 12.75C5.77614 12.75 6 12.9739 6 13.25L6 14.75C6 15.0261 5.77614 15.25 5.5 15.25L5 15.25C4.72386 15.25 4.5 15.0261 4.5 14.75L4.5 13.25Z" fill="#282B32"/>
+              <path d="M4.5 9.25C4.5 8.97386 4.72386 8.75 5 8.75L5.5 8.75C5.77614 8.75 6 8.97386 6 9.25L6 10.75C6 11.0261 5.77614 11.25 5.5 11.25L5 11.25C4.72386 11.25 4.5 11.0261 4.5 10.75L4.5 9.25Z" fill="#282B32"/>
+              <path d="M4.5 5.25C4.5 4.97386 4.72386 4.75 5 4.75L5.5 4.75C5.77614 4.75 6 4.97386 6 5.25L6 6.75C6 7.02614 5.77614 7.25 5.5 7.25L5 7.25C4.72386 7.25 4.5 7.02614 4.5 6.75L4.5 5.25Z" fill="#282B32"/>
+              <path d="M14 13.25C14 12.9739 14.2239 12.75 14.5 12.75L15 12.75C15.2761 12.75 15.5 12.9739 15.5 13.25L15.5 14.75C15.5 15.0261 15.2761 15.25 15 15.25L14.5 15.25C14.2239 15.25 14 15.0261 14 14.75L14 13.25Z" fill="#282B32"/>
+              <path d="M14 9.25C14 8.97386 14.2239 8.75 14.5 8.75L15 8.75C15.2761 8.75 15.5 8.97386 15.5 9.25L15.5 10.75C15.5 11.0261 15.2761 11.25 15 11.25L14.5 11.25C14.2239 11.25 14 11.0261 14 10.75L14 9.25Z" fill="#282B32"/>
+              <path d="M14 5.25C14 4.97386 14.2239 4.75 14.5 4.75L15 4.75C15.2761 4.75 15.5 4.97386 15.5 5.25L15.5 6.75C15.5 7.02614 15.2761 7.25 15 7.25L14.5 7.25C14.2239 7.25 14 7.02614 14 6.75L14 5.25Z" fill="#282B32"/>
+            </svg>
+            {{ course.lessonLength }} ta darslar
+          </p>
+        </div>
 
-    <div class="p-5">
-      <h3 class="text-xl font-bold text-gray-800 mb-2">{{ course.title }}</h3>
-      <p class="text-gray-600 text-sm mb-4">{{ course.description }}</p>
-      <div class="text-sm text-gray-500 mb-3 flex items-center gap-1"><span class="icon-user-tie text-lg"></span> Instructor: {{ course.instructor }}</div>
-
-      <a [routerLink]="'/course/view/' + course.id" class="px-4 py-2 bg-blue-500 text-white text-sm font-medium rounded-lg hover:bg-blue-600 transition cursor-pointer">
-        View Course
-      </a>
+        <a class="flex justify-center w-full py-[13px] bg-[#3FC0DB] text-white font-medium rounded-xl cursor-pointer">
+          Batafsil
+        </a>
+      </div>
     </div>
   </div>
+
 </div>
