--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -6,7 +6,7 @@
 
   <div class="relative flex items-center gap-10">
     <div class="flex items-center gap-2.5 cursor-pointer">
-      <!-- <span class="icon-books text-xl text-[#3FC0DB]!"></span> -->
+      <!-- <span class="icon-books text-xl text-[#3FC0DB]!"></span>    ICONMOON-->
       <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M16.8882 16.3825C14.9194 15.5395 12.214 15.6226 10.198 16.4186C10.0708 16.4688 9.92921 16.4688 9.80205 16.4186C7.786 15.6227 5.08063 15.5395 3.1118 16.3825C2.82706 16.5044 2.5 16.3024 2.5 15.9926V3.59104C2.5 3.43322 2.58891 3.28834 2.73154 3.22078C4.98147 2.15492 7.51736 2.38442 9.78489 3.40084C9.9217 3.46216 10.0783 3.46216 10.2151 3.40084C12.4826 2.38448 15.0185 2.1549 17.2685 3.22078C17.4111 3.28834 17.5 3.43322 17.5 3.59104V15.9926C17.5 16.3023 17.1729 16.5044 16.8882 16.3825Z" fill="white"/>
         <path d="M16.8882 16.38C14.9194 15.537 12.214 15.6225 10.1979 16.4186C10.0708 16.4688 9.92921 16.4688 9.80205 16.4186C7.78601 15.6225 5.08063 15.537 3.1118 16.38C2.82706 16.5019 2.5 16.2997 2.5 15.99V7.58983C2.5 7.432 2.58891 7.28748 2.73154 7.21991C4.98147 6.15405 7.51736 6.38443 9.78489 7.4009C9.9217 7.46223 10.0783 7.46223 10.2151 7.40091C12.4826 6.38449 15.0185 6.15403 17.2685 7.21991C17.4111 7.28748 17.5 7.43209 17.5 7.58991V15.99C17.5 16.2997 17.1729 16.5019 16.8882 16.38Z" fill="#D9F2F8"/>
@@ -17,7 +17,7 @@
       <p class="font-semibold text-gray-800 gap-2">Kurslar</p>
     </div>
     <div class="flex items-center gap-2.5 cursor-pointer">
-      <!-- <span class="icon-progress text-xl text-[#282B32]!"></span> -->
+      <!-- <span class="icon-progress text-xl text-[#282B32]!"></span>  ICONMOON-->
       <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <rect x="2" y="2" width="16" height="16" rx="4" fill="white"/>
         <path d="M2 7H18V14C18 16.2091 16.2091 18 14 18H6C3.79086 18 2 16.2091 2 14V7Z" fill="#D6D9E2"/>
