--- a/src/app/features/user/demo-course/components/custom-video-player-component/custom-video-player.component.html
+++ b/src/app/features/user/demo-course/components/custom-video-player-component/custom-video-player.component.html
@@ -26,9 +26,9 @@
     <!-- ▶️/⏸️ -->
     <button (click)="togglePlay()" class="text-xl mr-4">
       @if(isPlaying){
-        <span class="icon-pause"></span>
+        <span class="icon-pause">⏸️</span>
       }@else{
-        <span class="icon-play"></span>
+        <span class="icon-play">▶️</span>
       }
     </button>
 
