--- a/src/app/features/user/demo-course/pages/course-view/course-view.component.html
+++ b/src/app/features/user/demo-course/pages/course-view/course-view.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="w-[1170px] mx-auto">
   <div class="grid grid-cols-1 lg:grid-cols-[2fr_1fr] gap-10">
 
     <!-- Левая часть: Контент курса -->
