--- a/src/app/features/user/demo-course/pages/course/course.component.html
+++ b/src/app/features/user/demo-course/pages/course/course.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-100">
+<div class="w-[1170px] mx-auto">
   <!-- Главный блок -->
   <div class="mx-auto grid grid-cols-1 lg:grid-cols-[2fr_5fr] gap-6">
 
