--- a/src/app/features/user/demo-course/pages/course/course.component.html
+++ b/src/app/features/user/demo-course/pages/course/course.component.html
@@ -21,7 +21,7 @@
       <!-- Видео плеер -->
       <div class="bg-black w-full rounded-xl overflow-hidden shadow-lg mb-6">
         <!-- <iframe class="w-full h-full"
-                [src]="selectedVideo.embedUrl | safeUrl"
+                [src]="'https://www.youtube.com/embed/0ik6X4DJKCc' | safeUrl"
                 frameborder="0"
                 allowfullscreen>
         </iframe> -->
