--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -12,7 +12,7 @@
         </a>
 
         <div class="relative flex items-center gap-10">
-            <div class="flex items-center gap-2.5 cursor-pointer">
+            <a routerLink="/" class="flex items-center gap-2.5 cursor-pointer">
                 <!-- <span class="icon-books text-xl text-[#3FC0DB]!"></span>    ICONMOON-->
                 <svg
                     width="20"
@@ -39,7 +39,7 @@
                 </svg>
 
                 <p class="font-semibold text-[#0B181E] gap-2">Kurslar</p>
-            </div>
+            </a>
             <div class="flex items-center gap-2.5 cursor-pointer">
                 <!-- <span class="icon-progress text-xl text-[#282B32]!"></span>  ICONMOON-->
                 <svg
