--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,14 +1,10 @@
 <div class="max-w-[1170px] mx-auto border-x border-[#0208171A]">
     <div class="flex items-center justify-between py-6 px-5">
-        <a routerLink="/" class="flex items-center justify-between">
-            <img
-                src="./src/imgs/logo.png"
-                alt=""
-                class="w-full h-full object-cover"
-            />
-            <h2 class="text-xl font-bold text-gray-800 flex gap-2 ml-3">
-                firstep
-            </h2>
+        <a routerLink="/" class="flex gap-2 items-center">
+            <div class="bg-red-700 p-2 text-white font-bold">LMS</div>
+            <p class="text-2xl font-bold">
+                fir<span class="text-red-700">st</span>ep
+            </p>
         </a>
 
         <div class="relative flex items-center gap-10">
