--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,10 +1,7 @@
 <div class="max-w-[1170px] mx-auto border-x border-[#0208171A]">
     <div class="flex items-center justify-between py-6 px-5">
         <a routerLink="/" class="flex gap-2 items-center">
-            <div class="bg-red-700 p-2 text-white font-bold">LMS</div>
-            <p class="text-2xl font-bold">
-                fir<span class="text-red-700">st</span>ep
-            </p>
+            <img src="./src/imgs/logo.svg" class="h-10" alt="" />
         </a>
 
         <div class="relative flex items-center gap-10">
