--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -40,7 +40,7 @@
 
                 <p class="font-semibold text-[#0B181E] gap-2">Kurslar</p>
             </a>
-            <div class="flex items-center gap-2.5 cursor-pointer">
+            <div class="flex items-center gap-2.5 cursor-not-allowed">
                 <!-- <span class="icon-progress text-xl text-[#282B32]!"></span>  ICONMOON-->
                 <svg
                     width="20"
@@ -92,7 +92,7 @@
 
                 <p class="font-semibold text-[#0B181E] gap-2">Progres</p>
             </div>
-            <div class="flex items-center gap-2.5 cursor-pointer">
+            <div class="flex items-center gap-2.5 cursor-not-allowed">
                 <svg
                     width="20"
                     height="20"
@@ -159,8 +159,7 @@
                         <ul class="text-sm text-gray-700">
                             <li>
                                 <a
-                                    href="#"
-                                    class="flex items-center px-4 py-2 hover:bg-gray-100 space-x-2"
+                                    class="flex items-center px-4 py-2 hover:bg-gray-100 space-x-2 cursor-not-allowed"
                                 >
                                     <svg
                                         width="20"
@@ -205,8 +204,7 @@
                             </li>
                             <li>
                                 <a
-                                    href="#"
-                                    class="flex items-center px-4 py-3 hover:bg-gray-100 space-x-2"
+                                    class="flex items-center px-4 py-3 hover:bg-gray-100 space-x-2 cursor-not-allowed"
                                 >
                                     <svg
                                         width="20"
@@ -241,8 +239,7 @@
                             </li>
                             <li>
                                 <a
-                                    href="#"
-                                    class="flex items-center px-4 py-2 hover:bg-gray-100 rounded-b-xl space-x-2"
+                                    class="flex items-center px-4 py-2 hover:bg-gray-100 rounded-b-xl space-x-2 cursor-not-allowed"
                                 >
                                     <svg
                                         width="20"
