--- a/src/app/features/user/course/pages/course-view/course-view.component.html
+++ b/src/app/features/user/course/pages/course-view/course-view.component.html
@@ -42,8 +42,7 @@
                     </div>
                 </div>
                 <p class="max-w-[655px] leading-6 text-[#4D5663]">
-                    {{ course.description }} {{ course.description }}
-                    {{ course.description }}
+                    {{ course.fullDescription }}
                 </p>
             </div>
             <hr class="border-[#E3E8EF]" />
